welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:1: error: Missing closing brace `}' assumed here
var compteur=0
^countTeen:2: error: expected class or object definition
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
^